# rag-eval-benchmark-suite

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dashboard.txt  requirements.txt
.github/workflows/: ci.yml
app/: deps.py  main.py
dashboard/: app.py  helpers.py
data/: benchmark_medium.json  sample_benchmark.json
data/fixtures/sample_docs/: README.md  courant_demo.txt  handbook_demo.txt
docs/dashboard/: README.md
rag_eval/: __init__.py  config.py  hallucination.py  io.py  latency.py  schemas.py  torch_health.py
rag_eval/chunking/: __init__.py
rag_eval/embeddings/: __init__.py
rag_eval/experiments/: tracker.py
rag_eval/judge/: __init__.py  openai_compatible.py
rag_eval/metrics/: generation.py  nli.py  retrieval.py
rag_eval/pipeline/: __init__.py  evaluator.py
rag_eval/retrieval/: bm25.py  dense.py  hybrid.py  rerank.py
rag_eval/vectorstores/: faiss_store.py  qdrant_store.py
rag_eval/viz/: charts.py
scripts/: run_benchmark.py  smoke_dashboard_documents.py
tests/: test_api.py  test_llm_judge.py  test_retrieval_metrics.py
