[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-eval-benchmark-suite"
version = "0.1.0"
description = "Modular RAG evaluation framework for retrieval and generation benchmarking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.3",
    "faiss-cpu>=1.8.0",
    "qdrant-client>=1.7",
    "httpx>=0.26",
    "tiktoken>=0.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1"]
dashboard = [
    "streamlit>=1.28",
    "plotly>=5.18",
    "pypdf>=4.0",
    "python-docx>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_eval*", "app*", "dashboard*"]

[tool.ruff]
line-length = 100
target-version = "py310"
